feat: improved menus

--- a/frontend/src/assets/html/login.html
+++ b/frontend/src/assets/html/login.html
@@ -1,12 +1,11 @@
 <div style="text-align: center">
-<input type="text" name="usernameField" placeholder="login" style="font-size: 12px">
+<input type="text" name="usernameField" placeholder="username" style="font-size: 12px">
 <br>
 <br>
 <input type="password" name="passwordField" placeholder="password" style="font-size: 12px">
 <br>
 <br>
 <input type="button" name="button" value="Sign up" style="font-size: 12px">
-<br>
 <br>
 <p id="error" style="width: 155px;"></p>
 </div>
